# src/routes/index.js
@@ -2,12 +2,15 @@ const { Router } = require('express');
 const auth = require('../middleware/auth');
 const { health, echo, profile } = require('../controllers/testController');
 const { register, login } = require('../controllers/authController');
+const { updateProfile } = require('../controllers/profileController');
+const upload = require('../middleware/upload');
 
 const router = Router();
 
 router.get('/health', health);
 router.post('/echo', echo);
 router.get('/profile', auth, profile);
+router.patch('/profile', auth, upload.single('image'), updateProfile);
 router.post('/auth/register', register);
 router.post('/auth/login', login);
 
